// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;

exports[`should render correctly: invalid configs, admin 1`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;

exports[`should render correctly: invalid configs, admin 2`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;

exports[`should render correctly: invalid configs, not admin 1`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;

exports[`should render correctly: loading instances 1`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
        <span>
          onboarding.create_project.check_alm_supported
          <i
            className="little-spacer-left spinner"
          />
        </span>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
        <span>
          onboarding.create_project.check_alm_supported
          <i
            className="little-spacer-left spinner"
          />
        </span>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm disabled big-spacer-right"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
        <span>
          onboarding.create_project.check_alm_supported
          <i
            className="little-spacer-left spinner"
          />
        </span>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm disabled"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
        <span>
          onboarding.create_project.check_alm_supported
          <i
            className="little-spacer-left spinner"
          />
        </span>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;

exports[`should render correctly: no alm conf yet, admin 1`] = `
<Fragment>
  <h1
    className="huge-spacer-top huge-spacer-bottom"
  >
    onboarding.create_project.select_method
  </h1>
  <p>
    onboarding.create_project.select_method.devops_platform
  </p>
  <p
    className="spacer-top"
  >
    onboarding.create_project.select_method.no_alm_yet.admin
  </p>
  <div
    className="big-spacer-top huge-spacer-bottom display-flex-center"
  >
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/azure.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.azure
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.bitbucket
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm big-spacer-right"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/github.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.github
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
    <div
      className="display-flex-column"
    >
      <button
        className="button button-huge display-flex-column create-project-mode-type-alm"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={50}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top abs-height-50 display-flex-center"
        >
          onboarding.create_project.select_method.gitlab
        </div>
        <p
          className="text-muted small spacer-top"
          style={
            Object {
              "lineHeight": 1.5,
            }
          }
        >
          onboarding.create_project.alm_not_configured.admin
        </p>
      </button>
    </div>
  </div>
  <p
    className="big-spacer-bottom"
  >
    onboarding.create_project.select_method.manually
  </p>
  <button
    className="button button-huge display-flex-column create-project-mode-type-manual"
    onClick={[Function]}
    type="button"
  >
    <ChevronsIcon
      size={50}
    />
    <div
      className="medium big-spacer-top"
    >
      onboarding.create_project.select_method.manual
    </div>
  </button>
</Fragment>
`;
